# django-cs-archive

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/django_cs_archive/: apps.py  models.py  urls.py  utils.py  views.py
src/django_cs_archive/templates/django_cs_archive/: archive_day.html  archive_index.html  archive_month.html  archive_year.html
